--- a/hyconsys-base.sty
+++ b/hyconsys-base.sty
@@ -53,37 +53,24 @@
 \clubpenalty=10000      % Schusterjungen
 \displaywidowpenalty=10000
 
-% Blautöne:
+% Colors
 \definecolor{HYCONSYSBlau}{RGB}{0,101,189} % Pantone 300
 \definecolor{HYCONSYSBlauDunkel}{RGB}{0,82,147} % Pantone 301
 \definecolor{HYCONSYSBlauHell}{RGB}{152,198,234} % Pantone 283
 \definecolor{HYCONSYSBlauMittel}{RGB}{100,160,200} % Pantone 542
-
-% Hervorhebung:
 \definecolor{HYCONSYSElfenbein}{RGB}{218,215,203} % Pantone 7527 -Elfenbein
 \definecolor{HYCONSYSGruen}{RGB}{162,173,0} % Pantone 383 - Grün
 \definecolor{HYCONSYSOrange}{RGB}{227,114,34} % Pantone 158 - Orange
 \definecolor{HYCONSYSGrau}{gray}{0.6} % Grau 60%
 
-% university information
+% univ/dept/group information
 \newcommand{\theuniversity}{Hybrid Control Systems Lab}
-\addto\captionsenglish{%
-  \renewcommand{\theuniversity}{Hybrid Control Systems Lab}
-}
-\addto\captionsngerman{%
-  \renewcommand{\theuniversity}{Technische Universität München}
-}
-\newcommand{\UniversitaetAbkuerzung}{HyConSys}
-\newcommand{\UniversitaetWebseite}{www.hyconsys.com}
-\newcommand{\UniversitaetAdresse}{%
+\newcommand{\thewebseite}{www.hyconsys.com}
+\newcommand{\theadresse}{%
     1111 Engineering Drive\\%
     Boulder, CO 80309-0430 USA%
 }
-
-% department information
 \newcommand{\thedepartment}{\strut}
-
-% group information
 \newcommand{\thegroup}{\strut}
 \newcommand{\thecontactperson}{\strut}
 
